objects/PG_Metric__c.object
<CustomObject>
    <description>Represents an individual Performance Guarantee which is offered to the Client. There will be often be multiple per each PG Request. Each record is an instance of a the custom object ‘PG Catalog Item’. Created per PRDCRM-51221.</description>
    <fields>
        <fullName>AAR_Ongoing_of_Base_Admin_Service_Fees_1__c</fullName>
        <inlineHelpText>Amount At Risk Dollars</inlineHelpText>
        <label>AAR Ongoing $ of Base Admin Service Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AAR_Ongoing_of_Base_Admin_Service_Fees__c</fullName>
        <inlineHelpText>Amount At Risk Percentage</inlineHelpText>
        <label>AAR Ongoing % of Base Admin Service Fees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AAR_Year_01_of_Base_Admin_Service_Fees__c</fullName>
        <inlineHelpText>Amount At Risk Dollars</inlineHelpText>
        <label>AAR Year 1 $ of Base Admin Service Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AAR_Year_1_of_Base_Admin_Service_Fees__c</fullName>
        <inlineHelpText>Amount At Risk Percentage</inlineHelpText>
        <label>AAR Year 1 % of Base Admin Service Fees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ANA_Minimum_Members__c</fullName>
        <formula>PG_Catalog_Item__r.ANA_Minimum_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ANA Minimum Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK( PG_Request_ID__r.Account_Name__r.Id,PG_Request_ID__r.Account_Name__r.Name )</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>PG_Request_ID__r.Anthem_Entity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Limited to 255 characters for history tracking purposing. If additional space is needed you can add a &quot;Note&quot; via the related list.</inlineHelpText>
        <label>Approval Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broad_Contract_Category__c</fullName>
        <formula>Text( PG_Catalog_Item__r.Broad_Contract_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broad Contract Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Minimum_Members__c</fullName>
        <formula>PG_Catalog_Item__r.LG_Minimum_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LG Minimum Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measurement_Period__c</fullName>
        <label>Measurement Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual beginning with the start of the fourth month of the initial Agreement Period</fullName>
                </value>
                <value>
                    <fullName>Annual plus 12 months of Claims Runout</fullName>
                </value>
                <value>
                    <fullName>Defined in Implementation Plan</fullName>
                </value>
                <value>
                    <fullName>Employer&apos;s effective date</fullName>
                </value>
                <value>
                    <fullName>Commencing on data specified and ending 18 months thereafter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>HYPERLINK( PG_Request_ID__r.Opportunity_Name__r.Id, PG_Request_ID__r.Opportunity_Name__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PG_Metric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PG_Catalog_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Catalog Item</label>
        <referenceTo>PG_Catalog_Item__c</referenceTo>
        <relationshipName>PG_Metric</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PG_Catalog_Unique_Identifier__c</fullName>
        <formula>PG_Catalog_Item__r.PG_Catalog_Unique_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG Catalog Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Reporting_Team_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Limited to 255 characters for history tracking purposing. If additional space is needed you can add a &quot;Note&quot; via the related list.</inlineHelpText>
        <label>PG Reporting Team Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Reporting_Team_Status__c</fullName>
        <label>PG Reporting Team Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Request_ID__c</fullName>
        <label>PG Request ID</label>
        <referenceTo>PG_Request__c</referenceTo>
        <relationshipName>PG_Metric</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PG_Title__c</fullName>
        <formula>PG_Catalog_Item__r.PG_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Type__c</fullName>
        <formula>Text( PG_Catalog_Item__r.PG_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Category__c</fullName>
        <formula>Text( PG_Catalog_Item__r.Performance_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>Text(PG_Catalog_Item__r.Rating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <label>Reporting Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>60 calendar days following the end of the implementation plan</fullName>
                </value>
                <value>
                    <fullName>60 calendar days following Anthem&apos;s receipt of the survey</fullName>
                </value>
                <value>
                    <fullName>60 calendar days following the Employer&apos;s effective date</fullName>
                </value>
                <value>
                    <fullName>Initial Report to be provided 6 months after the Measurement Period.  Final Report at the conclusion of the 12 month Claims Runout Period as identified in the Measurement Period</fullName>
                </value>
                <value>
                    <fullName>Within 90 days following the end of the Measurement Period</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Bi Annual</fullName>
                    <isActive>false</isActive>
                    <label>Bi Annual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SME_Department_for_PG__c</fullName>
        <formula>Text(PG_Catalog_Item__r.SME__c)</formula>
        <label>SME Department for PG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Settlement_Period__c</fullName>
        <label>Settlement Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Similar_ANA_Minimum_Members__c</fullName>
        <formula>Similar_PG_Catalog_Item__r.ANA_Minimum_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar ANA Minimum Members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Similar_Broad_Contract_Category__c</fullName>
        <formula>Text(Similar_PG_Catalog_Item__r.Broad_Contract_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar Broad Contract Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Similar_LG_Minimum_Members__c</fullName>
        <formula>Similar_PG_Catalog_Item__r.LG_Minimum_Members__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar LG Minimum Members</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Similar_PG_Catalog_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the similar PG which Anthem offers that can be used as a baseline or for reference.</inlineHelpText>
        <label>Similar PG Catalog Item</label>
        <referenceTo>PG_Catalog_Item__c</referenceTo>
        <relationshipLabel>PG Metric (Similar PG Catalog Item)</relationshipLabel>
        <relationshipName>PG_Metric1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Similar_PG_Catalog_Unique_Identifier__c</fullName>
        <formula>Similar_PG_Catalog_Item__r.PG_Catalog_Unique_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar PG Catalog Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Similar_PG_Rating__c</fullName>
        <formula>Text(Similar_PG_Catalog_Item__r.Rating__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar PG Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Similar_PG_Title__c</fullName>
        <formula>Similar_PG_Catalog_Item__r.PG_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar PG Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Similar_PG_Type__c</fullName>
        <formula>Text(Similar_PG_Catalog_Item__r.PG_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar PG Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Similar_Performance_Category__c</fullName>
        <formula>Text(Similar_PG_Catalog_Item__r.Performance_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar Performance Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Similar_SME_Department_for_PG__c</fullName>
        <formula>Text( Similar_PG_Catalog_Item__r.SME__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar SME Department for PG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Similar_Specific_Contract_Category__c</fullName>
        <formula>Text(Similar_PG_Catalog_Item__r.Specific_Contract_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Similar Specific Contract Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>PG_Request_ID__r.Situs_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Contract_Category__c</fullName>
        <formula>text( PG_Catalog_Item__r.Specific_Contract_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specific Contract Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Pending SME Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Pending Legal Review</fullName>
                </value>
                <value>
                    <fullName>Approved for Catalog Addition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tiering_Result_and_Penalty_Option__c</fullName>
        <label>Tiering Result and Penalty Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1 (No Tiering)</fullName>
                </value>
                <value>
                    <fullName>Option 2 (Standard Tiering)</fullName>
                </value>
                <value>
                    <fullName>Option 3 (Custom Tiering)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PG Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PG_Approver__c</columns>
        <columns>Status__c</columns>
        <columns>PG_Title__c</columns>
        <columns>Performance_Category__c</columns>
        <columns>Broad_Contract_Category__c</columns>
        <columns>Specific_Contract_Category__c</columns>
        <columns>Approval_Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved_PGs_Call_Center</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PG_Approver__c</columns>
        <columns>Status__c</columns>
        <columns>PG_Title__c</columns>
        <columns>Performance_Category__c</columns>
        <columns>Broad_Contract_Category__c</columns>
        <columns>Specific_Contract_Category__c</columns>
        <columns>Approval_Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Approved for Catalog Addition</value>
        </filters>
        <filters>
            <field>SME_Department_for_PG__c</field>
            <operation>equals</operation>
            <value>Call Center</value>
        </filters>
        <label>Approved PGs - Call Center</label>
    </listViews>
    <listViews>
        <fullName>Approved_PGs_Claims</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PG_Approver__c</columns>
        <columns>Status__c</columns>
        <columns>PG_Title__c</columns>
        <columns>Performance_Category__c</columns>
        <columns>Broad_Contract_Category__c</columns>
        <columns>Specific_Contract_Category__c</columns>
        <columns>Approval_Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Approved for Catalog Addition</value>
        </filters>
        <filters>
            <field>SME_Department_for_PG__c</field>
            <operation>equals</operation>
            <value>Claims</value>
        </filters>
        <label>Approved PGs - Claims</label>
    </listViews>
    <listViews>
        <fullName>New_Metric_Pending_Catalog_Addition</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PG_Approver__c</columns>
        <columns>Status__c</columns>
        <columns>PG_Reporting_Team_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Situs_State__c</columns>
        <columns>PG_Catalog_Item__c</columns>
        <columns>Similar_PG_Catalog_Item__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved for Catalog Addition</value>
        </filters>
        <label>New Metric - Pending Catalog Addition</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Metric_Pending_Legal_Review</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PG_Approver__c</columns>
        <columns>Status__c</columns>
        <columns>PG_Reporting_Team_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Situs_State__c</columns>
        <columns>PG_Catalog_Item__c</columns>
        <columns>Similar_PG_Catalog_Item__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Legal Review</value>
        </filters>
        <label>New Metric - Pending Legal Review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>New_Metric_Pending_PG_Reporting_Team</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PG_Approver__c</columns>
        <columns>Status__c</columns>
        <columns>PG_Reporting_Team_Status__c</columns>
        <columns>Anthem_Entity__c</columns>
        <columns>Situs_State__c</columns>
        <columns>PG_Catalog_Item__c</columns>
        <columns>Similar_PG_Catalog_Item__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>PG_Metric__c.New_Metric_Request</value>
        </filters>
        <filters>
            <field>PG_Reporting_Team_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Denied,Withdrawn</value>
        </filters>
        <label>New Metric - Pending PG Reporting Team</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_PGs_Call_Center</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PG_Approver__c</columns>
        <columns>Status__c</columns>
        <columns>PG_Title__c</columns>
        <columns>Performance_Category__c</columns>
        <columns>Broad_Contract_Category__c</columns>
        <columns>Specific_Contract_Category__c</columns>
        <columns>Approval_Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending SME Review,Pending Legal Review</value>
        </filters>
        <filters>
            <field>SME_Department_for_PG__c</field>
            <operation>equals</operation>
            <value>Call Center</value>
        </filters>
        <label>Pending PGs - Call Center</label>
    </listViews>
    <listViews>
        <fullName>Pending_PGs_Claims</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PG_Approver__c</columns>
        <columns>Status__c</columns>
        <columns>PG_Title__c</columns>
        <columns>Performance_Category__c</columns>
        <columns>Broad_Contract_Category__c</columns>
        <columns>Specific_Contract_Category__c</columns>
        <columns>Approval_Comments__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending SME Review,Pending Legal Review</value>
        </filters>
        <filters>
            <field>SME_Department_for_PG__c</field>
            <operation>equals</operation>
            <value>Claims</value>
        </filters>
        <label>Pending PGs - Claims</label>
    </listViews>
    <nameField>
        <displayFormat>PGMETR-{0000}</displayFormat>
        <label>PG Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PG Metric</pluralLabel>
    <recordTypes>
        <fullName>AHG_Engagement_by_Customer_Service</fullName>
        <active>true</active>
        <label>AHG Engagement by Customer Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Management_Satisfaction</fullName>
        <active>true</active>
        <label>Account Management Satisfaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Average_Speed_to_Answer</fullName>
        <active>true</active>
        <label>Average Speed to Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>BH_Average_Speed_to_Answer</fullName>
        <active>true</active>
        <label>BH Average Speed to Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>BH_Call_Abandonment_Rate</fullName>
        <active>true</active>
        <label>BH Call Abandonment Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>CAD_Statin_Medications</fullName>
        <active>true</active>
        <label>CAD (Statin Medications)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Call_Abandonment_Rate</fullName>
        <active>true</active>
        <label>Call Abandonment Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Claim_Timeliness_14_Calendar_Days</fullName>
        <active>true</active>
        <label>Claim Timeliness (14 Calendar Days)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Claim_Timeliness_30_Calendar_Days</fullName>
        <active>true</active>
        <label>Claim Timeliness (30 Calendar Days)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Claims_Accuracy</fullName>
        <active>true</active>
        <label>Claims Accuracy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Claims_Financial_Accuracy</fullName>
        <active>true</active>
        <label>Claims Financial Accuracy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Clinical_Intervention_Return_on_Investment</fullName>
        <active>true</active>
        <label>Clinical Intervention Return on Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConditionCare_Engagement_Rate</fullName>
        <active>true</active>
        <label>ConditionCare Engagement Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConditionCare_Enrollment_Rate</fullName>
        <active>true</active>
        <label>ConditionCare Enrollment Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>ConditionCare_Member_Satisfaction</fullName>
        <active>true</active>
        <label>ConditionCare Member Satisfaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Diabetes_Hemoglobin_A1c_HbA1c_Testing</fullName>
        <active>true</active>
        <label>Diabetes Hemoglobin A1c (HbA1c) Testing</label>
    </recordTypes>
    <recordTypes>
        <fullName>EAP_Average_Speed_to_Answer</fullName>
        <active>true</active>
        <label>EAP Average Speed to Answer</label>
    </recordTypes>
    <recordTypes>
        <fullName>EAP_Call_Abandonment_Rate</fullName>
        <active>true</active>
        <label>EAP Call Abandonment Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>EAP_Management_Reports</fullName>
        <active>true</active>
        <label>EAP Management Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>EAP_Network_Access</fullName>
        <active>true</active>
        <label>EAP Network Access</label>
    </recordTypes>
    <recordTypes>
        <fullName>Existing_Metric</fullName>
        <active>true</active>
        <label>Existing Metric</label>
    </recordTypes>
    <recordTypes>
        <fullName>First_Call_Resolution</fullName>
        <active>true</active>
        <label>First Call Resolution</label>
    </recordTypes>
    <recordTypes>
        <fullName>Heart_Failure_ACE_Inhibitors_ARB</fullName>
        <active>true</active>
        <label>Heart Failure ACE Inhibitors/ARB</label>
    </recordTypes>
    <recordTypes>
        <fullName>IHM_30_Day_Inpatient_Readmission</fullName>
        <active>true</active>
        <label>IHM 30 Day Inpatient Readmission</label>
    </recordTypes>
    <recordTypes>
        <fullName>IHM_Avoidable_ER_Visit</fullName>
        <active>true</active>
        <label>IHM Avoidable ER Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>IHM_Engagement</fullName>
        <active>true</active>
        <label>IHM Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>IHM_High_Dollar_Claimant_Outreach</fullName>
        <active>true</active>
        <label>IHM High Dollar Claimant Outreach</label>
    </recordTypes>
    <recordTypes>
        <fullName>IHM_Inpatient_Admissions</fullName>
        <active>true</active>
        <label>IHM Inpatient Admissions</label>
    </recordTypes>
    <recordTypes>
        <fullName>IHM_Member_Outreach_for_Post_Discharge_Counseling</fullName>
        <active>true</active>
        <label>IHM Member Outreach for Post Discharge Counseling</label>
    </recordTypes>
    <recordTypes>
        <fullName>IHM_Member_Outreach_for_Pre_Admission_Counseling</fullName>
        <active>true</active>
        <label>IHM Member Outreach for Pre Admission Counseling</label>
    </recordTypes>
    <recordTypes>
        <fullName>IHM_Member_Satisfaction</fullName>
        <active>true</active>
        <label>IHM Member Satisfaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implementation</fullName>
        <active>true</active>
        <label>Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implementation_Survey</fullName>
        <active>true</active>
        <label>Implementation Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integrated_Imaging_and_Sleep_Apnea_Program_Return_on_Investment_ROI</fullName>
        <active>true</active>
        <label>Integrated Imaging and Sleep Apnea Program Return on Investment (ROI)</label>
    </recordTypes>
    <recordTypes>
        <fullName>MHA_Alert_Conversion_Compliance_Rate</fullName>
        <active>true</active>
        <label>MHA Alert Conversion/Compliance Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>MHA_Member_Touch_Rate</fullName>
        <active>true</active>
        <label>MHA Member Touch Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>MHA_Return_on_Investment</fullName>
        <active>true</active>
        <label>MHA Return on Investment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Management_Reports</fullName>
        <active>true</active>
        <label>Management Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Redirected_Guidance_for_CT_and_MRI_Services</fullName>
        <active>true</active>
        <label>Member Redirected Guidance for CT and MRI Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Redirection_for_CT_and_MRI_Services</fullName>
        <active>true</active>
        <label>Member Redirection for CT and MRI Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Satisfaction_NPS</fullName>
        <active>true</active>
        <label>Member Satisfaction (NPS)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Satisfaction_Service_Skills</fullName>
        <active>true</active>
        <label>Member Satisfaction (Service Skills)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network_Alerts</fullName>
        <active>true</active>
        <label>Network Alerts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network_Provider_Discount</fullName>
        <active>true</active>
        <label>Network Provider Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network_Provider_Discount_ANA_Discount</fullName>
        <active>true</active>
        <label>Network Provider Discount (ANA Discount)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network_Provider_Utilization</fullName>
        <active>true</active>
        <label>Network Provider Utilization</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Metric_Request</fullName>
        <active>true</active>
        <label>New Metric Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ongoing_ID_Cards_Issuance</fullName>
        <active>true</active>
        <label>Ongoing ID Cards Issuance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Enrollment_ID_Card_Issuance</fullName>
        <active>true</active>
        <label>Open Enrollment ID Card Issuance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Persistent_Asthma_Prescription_Drug_Dispensed</fullName>
        <active>true</active>
        <label>Persistent Asthma Prescription Drug Dispensed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processing_of_Ongoing_Eligibility_Information</fullName>
        <active>true</active>
        <label>Processing of Ongoing Eligibility Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Provider_Accessibility</fullName>
        <active>true</active>
        <label>Provider Accessibility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sleep_Redirection_Facility_to_Home</fullName>
        <active>true</active>
        <label>Sleep Redirection (Facility to Home)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Total_Provider_Discount</fullName>
        <active>true</active>
        <label>Total Provider Discount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Total_Provider_Discount_ANA_Discount</fullName>
        <active>true</active>
        <label>Total Provider Discount (ANA Discount)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website_Availability</fullName>
        <active>true</active>
        <label>Website Availability</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PGMETR_VR01_Status_Denied_Add_Comment</fullName>
        <active>true</active>
        <description>Prevent a user who tries to update Status=Denied and the Approval Comments field is null</description>
        <errorConditionFormula>AND
(
 ISPICKVAL( Status__c , &quot;Denied&quot;) ,
 ISBLANK( Approval_Comments__c ) 
)</errorConditionFormula>
        <errorMessage>Need to specify Comments when Status is &apos;Denied&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PGMETR_VR02_PGApprover_Null</fullName>
        <active>true</active>
        <description>Prevents a user who tries to update Status to &quot;Approved&quot; and the PG Approver field is null</description>
        <errorConditionFormula>AND
(
 ISPICKVAL( Status__c , &quot;Approved&quot; ) ,
 ISBLANK(  PG_Approver__c  ) 
)</errorConditionFormula>
        <errorMessage>PG Approver cannot be null when Status is &apos;Approved&apos;</errorMessage>
    </validationRules>
</CustomObject>